@@ -1,3 +1,13 @@
+2007-07-08  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_button.cpp,
+	* gameswf/gameswf_sprite.cpp: fixed one more _width & _heigth bug
+	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: typo
+	* gameswf/samples/test_bound.fla,
+	* gameswf/samples/test_bound.swf: added testcase for _width & _heigth
+	* gameswf/samples/test_delete.fla,
+	* gameswf/samples/test_delete.swf: a bit cleanup
+
 2007-07-07  Thatcher Ulrich <tu@tulrich.com>
 	We don't use non-const references --> fix character::get_bound(),
 	matrix::transform(rect*), matrix::transform_by_inverse(rect*)
